--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Add VPS to known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -p 666 -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+
       - name: Push to server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          port: 6666
+          port: 666
           script: |
             sudo git config --global --add safe.directory ${{ secrets.PROJECT_PATH }}
             cd ${{ secrets.PROJECT_PATH }}
