--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
 
       - name: Add VPS to known_hosts
         run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -p 666 -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+          mkdir -p $HOME/.ssh
+          ssh-keyscan -p 666 -H ${{ secrets.SERVER_IP }} >> $HOME/.ssh/known_hosts
 
       - name: Push to server
         uses: appleboy/ssh-action@master
@@ -25,3 +25,4 @@ jobs:
             sudo git config --global --add safe.directory ${{ secrets.PROJECT_PATH }}
             cd ${{ secrets.PROJECT_PATH }}
             sudo git pull
+
